--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,13 @@
 body{
     font-family: 'Spartan', sans-serif;
     font-weight: 400;
-    color:#424141
+    color:#424141;
+    background-color:#F7F7F8;
+}
+
+header{
+    box-shadow: 0px 0px 10px -5px #999;
+    background-color: #fff;
 }
 
 .logo-cabecera{
@@ -16,8 +22,16 @@ h1 span{
     color:#8F8F8F;
 }
 
-h2{
+h1{
     font-weight: 900;
+}
+
+h2{
+    font-weight: 700;
+}
+
+.contenedor-resultados{
+    background-color: #fff;
 }
 
 /* TABS */ 
@@ -32,4 +46,8 @@ h2{
 /* IMAGENES */
 .img-fluid{
     width:100%
+}
+
+.redondo{
+    border-radius: 50%;
 }
